--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,8 +2,8 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+$kaldi-red: #4675c3
+$kaldi-red-invert: #5e5d5d
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
@@ -57,14 +57,14 @@ $black: #2b2523
     font-size: 18px
     font-size: 1rem
     line-height: 1.25
-    background-color: #fff
+    background-color: #4675c3
     border-radius: .25rem
     text-decoration: none
-    font-weight: 700
-    color: #CC3700
+    font-weight: 900
+    color: white
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
-    box-shadow: inset 0 0 0 2px #f40
+    -webkit-box-shadow: inset 0 0 0 2px #4675c3
+    box-shadow: inset 0 0 0 2px #4675c3
     -webkit-transition: all .15s ease
     transition: all .15s ease
 
@@ -75,17 +75,17 @@ $black: #2b2523
   color: $primary
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
-  width: 1.5rem
-  height: 1.5rem
+  width: 2rem
+  height: 2rem
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
 footer.footer
   padding: 3rem 0rem 0rem
-  background-color: transparent
+  background-color: rgba(233, 233, 233, 0.62)
 
 //Menu overrides
-$menu-item-color: $white-ter
+$menu-item-color: #2b2523
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
 $menu-item-active-color: $kaldi-red-invert
@@ -100,6 +100,7 @@ $menu-label-color: $white-ter
 .menu-list
   list-style: none !important
   text-align: left
+  color: #2b2523
 .social
   padding: 2em
 .social a
@@ -114,7 +115,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #e3f9f1;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
