--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -113,7 +113,7 @@ $menu-label-color: $white-ter
     vertical-align: middle
     display: inline
 
-// blog roll
+// pages roll
 .blog-list-item.is-featured
   background-color: #e3f9f1;
 .blog-list-item header
