--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -31,7 +31,7 @@ $black: #2b2523
 // Helper Classes
 .full-width-image-container
   width: 100vw
-  height: 400px
+  height: 300px
   position: relative
   left: 50%
   right: 50%
@@ -44,7 +44,7 @@ $black: #2b2523
 
 .full-width-image
     width: 100vw
-    height: 400px
+    height: 300px
     background-size: cover
     background-position: bottom
     display: flex
@@ -70,6 +70,9 @@ $black: #2b2523
 
 .margin-top-0
   margin-top: 0 !important
+
+  .navbar-item img
+    max-height: 2rem;
 
 .navbar-item .icon
   color: $primary
@@ -123,6 +126,17 @@ $menu-label-color: $white-ter
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
 
+// Lender Table
+.LenderTable
+  height: 80px;
+
+.table__wrapper
+  overflow-x: auto;
+
+.pricing
+  width: 100%;
+
+
 
 @import "~bulma"
 
@@ -139,3 +153,4 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+
